--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fleur+De+Leah&family=Hina+Mincho&family=Inter:wght@300;400;500;600;700&family=Noto+Serif&family=Peddana&family=Uchen&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
